Don’t wrap create ReactiveAuthenticationProvider
Only create ReactiveAuthenticationProvider from imperative if there is any ReactiveAuthenticationProvider or if there is a blocking imperative AuthenticationProvider